# SoundTouchDemo

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  soundtouch-jni.cpp
app/src/main/cpp/SoundTouch/: BPMDetect.cpp  SoundTouch.cpp  TDStretch.cpp
app/src/main/cpp/include/: SoundTouch.h
app/src/main/java/cn/freedom/soundtouchdemo/: AudioDeviceAndroid.java  ExampleActivity.java  MainActivity.java
app/src/main/java/net/surina/soundtouch/: SoundTouch.java
app/src/main/res/layout/: activity_example.xml  activity_main.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
